--- a/offline.html
+++ b/offline.html
@@ -63,7 +63,7 @@
       } catch {
         // Unable to connect to the server, ignore.
       }
-      window.setTimeout(checkNetworkAndReload, 2500);
+      // window.setTimeout(checkNetworkAndReload, 2500);
     }
 
     checkNetworkAndReload();
