--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/img/icons/apple-touch-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/img/icons/apple-touch-icon-192x192.png">
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#c00000">
   <meta name="msapplication-TileImage" content="/img/icons/mstile-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#c00000">
 
   <link rel="manifest" href="/manifest.json">
 
