Añadido enlace a la web normal

--- a/pwa.html
+++ b/pwa.html
@@ -28,6 +28,7 @@
 <body>
   <div>
     <h1>PWA HOME</h1>
+    <p><a href="/index.html">IR A LA WEB</a></p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia tempus risus, eget dapibus justo. Integer eu
       luctus ex. Proin nunc massa, ullamcorper interdum ante ac, sagittis euismod arcu. Nulla maximus at mi sit amet euismod.
       Pellentesque vitae tortor quis lacus aliquet bibendum at a tortor. Cras at sapien eget ante aliquam congue vitae ac
