--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
 <body>
   <div>
-    <h1>Envio de notificaciones (12)</h1>
+    <h1>Envio de notificaciones (13)</h1>
     <p>Basado en el vídeo de YouTube <a href="https://www.youtube.com/watch?v=0S-1te9dRoQ" target="_blank">Mi primer notificacion en HTML5 - HTML5 NOTIFICATIONS API</a></p>
-    <p>Testear en <a href="https://jumi.php72.adimedia.local/">https://jumi.php72.adimedia.local/</a></p>
+    <p>Testear en <a href="https://akajumi.github.io/">https://akajumi.github.io/</a></p>
     <div id="sin-notificaciones" class="oculto">
       <p><strong>No soporta notificaciones.</strong></p>
     </div>
